Fix various text wrapping on different screen sizes (#729)
* sc-11800 wow header wraps in mobile

* sc-11798 address page info flex wrap change

* sc-12072 evictions since 2017 column header does not wrap

* prettier

* prettier

* Update client/src/styles/AddressToolbar.scss


* Update client/src/styles/PortfolioTable.scss


* Update client/src/styles/PortfolioTable.scss


---------

--- a/client/src/styles/PortfolioTable.scss
+++ b/client/src/styles/PortfolioTable.scss
@@ -15,6 +15,14 @@ $table-border-dark: 1px solid $dark;
     position: relative;
     overflow: auto;
 
+    th[class^="col-Evictions"] div {
+      min-width: 15rem;
+    }
+
+    tr {
+      padding: 0rem 0.5rem;
+    }
+
     // Add right-side fade out when list is scrollable:
     &::after {
       content: "";
